--- a/build.gradle
+++ b/build.gradle
@@ -40,3 +40,15 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+// Main Application Class
+sourceSets {
+    main {
+        java {
+            srcDirs = ['src/main/java']
+        }
+        resources {
+            srcDirs = ['src/main/resources']
+        }
+    }
+}
