--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
 
     // Lombok
     compileOnly 'org.projectlombok:lombok'
@@ -32,6 +33,9 @@ dependencies {
 	testImplementation 'io.projectreactor:reactor-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
+    // Fixed: Added explicit version for embedded MongoDB
+    testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:4.13.1'
+    
     // Lombok for tests (optional but recommended)
     testCompileOnly 'org.projectlombok:lombok'
     testAnnotationProcessor 'org.projectlombok:lombok'
